[tool.poetry]
name = "josephs-game"
version = "0.1.0"
description = "This is a game... isn't it?"
authors = ["j-kroon <josephkroon@gmail.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^2.1.1"
blessed = "^1.20.0"
rich = "^13.9.4"
prompt-toolkit = "^3.0.50"
pyfiglet = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "josephs_game" 

